JobCategories category name color updated

--- a/src/pages/Home/JobCategories/JobCategories.css
+++ b/src/pages/Home/JobCategories/JobCategories.css
@@ -1,5 +1,5 @@
 .category:hover .categoryIconDiv{
-    background-color: #afaff3;
+    background-color: #BFDBFE;
 }
 /* .category:hover .categoryIcon{
     color: white;
